fix(Field): fix Field label-align

--- a/packages/vant/src/field/index.less
+++ b/packages/vant/src/field/index.less
@@ -23,6 +23,15 @@
 .van-field {
   flex-wrap: wrap;
 
+  &--label {
+    &-top {
+      .van-field__value {
+        flex: none;
+        width: 100%;
+      }
+    }
+  }
+
   &__label {
     flex: none;
     box-sizing: border-box;
@@ -45,6 +54,10 @@
       width: 100%;
       text-align: left;
       margin-bottom: var(--van-padding-base);
+      .van-field__value {
+        flex: none;
+        width: 100%;
+      }
     }
 
     &--required {
